# atari8EspBusBang

./: .gitignore  CMakeLists.txt  README.md  core1.cpp  espEmptyTemplate.ino  notes  patch_esp32_lib_builder.sh  sdkconfig
esp32/: Makefile  atari8EspBusBang.ino  core1.cpp  core1.h  disk.h  page6.asm  page6.h  pbirom.asm  pbirom.h
main/: CMakeLists.txt  Makefile  arduinoLite.cpp  arduinoLite.h  ascii2keypress.h  asmDefs.h  asmdefs.h  atari8EspBusBang.cpp  atari8EspBusBang.ino  bmon.cpp  bmon.h  cartridge.cpp  cartridge.h  cio.cpp  cio.h  const.h  core1.cpp  core1.h  disk.h  diskFlash.cpp  diskFlash.h  diskImage.h  diskSmb.h  extMem.cpp  extMem.h  idf_component.yml  joust.h  led.h  link.lf  log.h  main.cpp  main.h  mmu.cpp  mmu.h  pbi.cpp  pbi.h  pbirom.asm  pbirom.h  pinDefs.h  profile.h  (+9 more)
main/csim/: csim.cpp  csim.h  spiffs.h  sysMonitorTest.cpp
main/lfs/: foo  hello.c  x.bat  x.cmd  x192.cmd  x2.cmd  x256.cmd
perf/: timingA.txt  timingB.txt  timingC.txt
tools/: analyze.py  atari800-llvm.sh  atari800-sdx.sh  bench-idf.sh  bench.sh  boot.sh  bt.sh  build_core1.sh  busa.sh  cap24.tcs  cap8.tcs  catoutput.sh  compAsm.sh  compareTimings.sh  deploy-idf.sh  deploy.sh  disassemble_core1.sh  halt.sh  httprequests.sh  hw-idf.sh  hw.sh  lfs_flash.sh  monitor.sh  monitorScreen.sh  onoff_stress.sh  power_off.sh  power_on.sh  prevAna.sh  pushgit.sh  screen-hw.sh  sdx.sh  sendscreen.sh  sendz.sh  showCrashScreens.sh  spiffs_flash.sh  testloop.sh  updateGitH.sh
